nginx (1.6.2-4) UNRELEASED; urgency=medium

  [ Christos Trochalakis ]
  * debian/modules/nginx-development-kit:
    + Upgrade v0.2.17-7-g24202b4 -> v0.2.19
  * debian/modules/nginx-echo:
    + Upgrade v0.51 -> v0.56

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Thu, 16 Oct 2014 15:47:04 +0300

nginx (1.6.2-3) unstable; urgency=medium

  [ Christos Trochalakis ]
  * Change the default document root to /var/www/html according to debian
    policy 3.9.6.0. (Closes: #730382)
  * Provide a new, debian specific, default landing page.
  * debian/nginx-common.nginx.service:
    + Graceful stopping of nginx was not handled correctly with systemd.
  * debian/nginx-common.nginx.init:
    + Gracefully stop nginx by default, we are switcing to a configurable
      STOP/5/TERM/5/KILL/5 schedule. We are now in sync with the systemd
      service file. (Closes: #762708)
  * debian/conf:
    + Introduce a `snippets/fastcgi-php.conf` snippet with a basic
      php configuration that can be included when needed. (Closes: #762491)
    + Introduce a `snippets/snakeoil.conf` snippet that enabled https
      using the certs installed by the ssl-cert package.
    + Suggest disabling SSLv3 in default site with a ref to POODLE.
  * debian/control:
    + nginx-common now suggests ssl-cert.

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Thu, 16 Oct 2014 13:34:29 +0300

nginx (1.6.2-2) unstable; urgency=medium

  [ Christos Trochalakis ]
  * Drop nginx-naxsi, nginx-naxsi-dbg, nginx-naxsi-ui packages.
    (Closes: #746199, #737146, #712445)
  * debian/conf/nginx.conf:
    + Remove relic passenger stanga.

 -- Christos Trochalakis <yatiohi@ideopolis.gr>  Fri, 26 Sep 2014 11:06:47 +0300

nginx (1.6.2-1) unstable; urgency=high

  [ Christos Trochalakis ]
  * New upstream release.
    CVE-2014-3616: "it was possible to reuse SSL sessions in unrelated
    contexts if a shared SSL session cache or the same TLS session ticket
    key was used for multiple "server" blocks".