@@ -38,7 +38,7 @@ README for Modules versions
   Homepage: https://github.com/masterzen/nginx-upload-progress-module
   https://nodeload.github.com/masterzen/nginx-upload-progress-module/tarball/master
   rm -r debian/nginx-upload-progress/test
-  Version: v0.9.0-0-ga788dea
+  Version: v0.9.1
 
  nginx-cache-purge
   Homepage: http://labs.frickle.com/nginx_ngx_cache_purge/
