@@ -5,6 +5,8 @@ nginx (1.6.2-4) UNRELEASED; urgency=medium
     + Upgrade v0.2.17-7-g24202b4 -> v0.2.19
   * debian/modules/nginx-echo:
     + Upgrade v0.51 -> v0.56
+  * debian/modules/nginx-upload-progress:
+    + Upgrade v0.9.0-0-ga788dea -> 0.9.1
 
  -- Christos Trochalakis <yatiohi@ideopolis.gr>  Thu, 16 Oct 2014 15:47:04 +0300
 
